# speed-dreams

./: .gitignore  .travis.yml  CHANGES.txt  CMakeLists.txt  COPYING.txt  INSTALL.txt  Jenkinsfile  README.txt  Vagrantfile  bootstrap.sh  deepdriving_tracks.sh  provision.sh
cmake/: FindOGG.cmake  (+22 more)
data/config/: CMakeLists.txt  graph.xml  logging.xml  raceengine.xml  raceresults.xsl  screen.xml  sound.xml
data/config/raceman/: CMakeLists.txt  practice.xml  quickrace.xml  singleevent-challenge.xml  singleevent-endurance.xml
data/data/: CMakeLists.txt  credits.xml
data/data/fonts/: CMakeLists.txt  droid-sans-bold.glf  droid-sans-normal.glf  jura-normal.glf  liberation-sans-bold.glf  liberation-sans-normal.glf
data/data/icons/: CMakeLists.txt  icon.xpm
data/data/img/: CMakeLists.txt
data/data/menu/: CMakeLists.txt  advancedgraphconfigmenu.xml  aiconfigmenu.xml  carselectionmenu.xml  carsettingsmenu.xml  controlconfigmenu.xml  creditsmenu.xml  displayconfigmenu.xml  driverselectmenu.xml  exitmenu.xml  fileselectmenu.xml  garagemenu.xml  graphicsconfigmenu.xml  helpmenu.xml  hostsettingsmenu.xml  joy2butconfigmenu.xml  joystickconfigmenu.xml  loadingscreen.xml  mainmenu.xml  monitorconfigmenu.xml  mouseconfigmenu.xml  networkclientconnectmenu.xml  networkclientmenu.xml  networkhostmenu.xml  networkmenu.xml  networkwaitconnectmenu.xml  notifications.xml  opengloptionsmenu.xml  optimizationscreen.xml  optionsmenu.xml  pitmenu.xml  playerconfigmenu.xml  practiceresultsmenu.xml  qualifsresultsmenu.xml  raceblindscreen.xml  raceglscreen.xml  racemanmenu.xml  racenexteventmenu.xml  raceparamsmenu.xml  raceresultsmenu.xml  (+7 more)
data/data/music/: CMakeLists.txt
data/data/objects/: Ambulance.ac  CMakeLists.txt  background-sky.ac  land.ac  normal_pit_indicator.ac  pit_indicator.ac  wheel0.ac  wheel0.acc  wheel0.blend  wheel0.osg  wheel1.ac  wheel1.acc  wheel1.osg  wheel2.ac  wheel2.acc  wheel2.osg  wheel3.ac  wheel3.acc  wheel3.osg
data/data/shaders/: CMakeLists.txt  car.frag  car.vert
data/data/sky/: CMakeLists.txt  Planets.txt  stars.txt
data/data/sound/: CMakeLists.txt
data/data/textures/: CMakeLists.txt  arbor2_n.rgb  breaklight1.rgb  breaklight2.rgb  halo.rgba  light-off.rgb  light-on.rgb  moon.rgba  outer_halo.rgba  pylon1.rgb  pylon2.rgb  pylon3.rgb  rpm20000.rgb  rpm5500.rgb  rpm7000.rgb  rpm8000.rgb  scattered1.rgba  scattered1_n.rgb  scattered2.rgba  scattered2_n.rgb  scattered3.rgba  scattered4.rgba  scattered5.rgba  scattered6.rgba  scattered6_n.rgb  scattered7.rgba  scattered7_n.rgb  scattered8.rgba  scattered8_n.rgb  speed240.rgb  speed300.rgb  speed360.rgb  torcs-ad1.rgb  torcsad1.rgb  torcsad2.rgb  tr-b-asphalt-r1p.rgb
data/data/tracks/: CMakeLists.txt  circuit.xml  development.xml  dirt.xml  gprix.xml  karting.xml  objects.xml  physics.xml  road.xml  speedway.xml  surfaces.xml
src/drivers/SUMO/: CMakeLists.txt  SUMO.cpp  ssd2.pb.cc  ssd2.pb.h  ssd2.proto
src/drivers/argos_AI1/: CMakeLists.txt  argos_AI1.cpp
src/drivers/human/: CMakeLists.txt  human.cpp
src/libs/: CMakeLists.txt
src/libs/ephemeris/: CMakeLists.txt  celestialbody.cpp  celestialbody.h  ephemeris.cpp  ephemeris.h  jupiter.cpp  jupiter.h  mars.cpp  mars.h  mercury.cpp  mercury.h  moonpos.cpp  moonpos.h  neptune.cpp  neptune.h  pluto.h  saturn.cpp  saturn.h  star.cpp  star.h  stardata.cpp  stardata.h  uranus.cpp  uranus.h  venus.cpp  venus.h
src/libs/gamepause/: CMakeLists.txt  gamepause.cpp  gamepause.h
src/libs/learning/: ANN.cpp  ANN.h  CMakeLists.txt  Distribution.cpp  Distribution.h  List.cpp  List.h  MathFunctions.cpp  MathFunctions.h  ann_policy.cpp  ann_policy.h  learn_debug.h  learning.h  policy.cpp  policy.h  string_utils.cpp  string_utils.h
src/libs/math/: CMakeLists.txt  SGCMath.h  SGGeoc.h  SGGeod.h  SGGeodesy.cpp  SGMath.h  SGVec3.h  constants.h  linalg_t.h  point3d.h  sg_geodesy.cpp  sg_random.c  sg_random.h  sg_types.h  straight2_t.h  v2_t.h  v3_t.h  v4_t.h  vector.cpp  vector.h
src/libs/metar/: CMakeLists.txt  mchannel.cpp  mchannel.h  mexception.cpp  mexception.h  mmetar.cpp  mmetar.h  msocket.cpp  msocket.h
src/libs/portability/: CMakeLists.txt  portability.cpp  portability.h
src/libs/robottools/: CMakeLists.txt  followDriver.cpp  followDriver.h  humandriver.h  robottools.h  rthumandriver.cpp  rtteammanager.cpp  rttelem.cpp  rttimeanalysis.cpp  rttrack.cpp  rtutil.cpp  teammanager.h  timeanalysis.h
src/libs/sensors/: CMakeLists.txt  gpsSensor.cpp  gpsSensor.h  obstacleSensors.cpp  obstacleSensors.h  positionTracker.cpp  positionTracker.h  randomUtil.cpp  randomUtil.h
src/libs/tgf/: CMakeLists.txt  application.cpp  directory.cpp  eventloop.cpp  file.cpp  filesetup.cpp  formula.cpp  hash.cpp  legacymodule.cpp  linuxspec.cpp  linuxspec.h  memmanager.cpp  memmanager.h  modinfo.cpp  modinfo.h  module.cpp  os.cpp  os.h  osspec.h  params.cpp  profiler.cpp  schedulespy.cpp  tgf.cpp  tgf.h  tgf.hpp  trace.cpp  windowsspec.cpp  windowsspec.h
src/libs/tgfclient/: CMakeLists.txt  control.cpp  glfeatures.cpp  glfeatures.h  gui.cpp  gui.h  guiapplication.cpp  guibutton.cpp  guicheckbox.cpp  guicombobox.cpp  guiedit.cpp  guieventloop.cpp  guifont.cpp  guifont.h  guihelp.cpp  guiimage.cpp  guilabel.cpp  guimenu.cpp  guimenu.h  guimenutest.xml  guiobject.cpp  guiprogresbar.cpp  guiscreen.cpp  guiscreen.h  guiscrollbar.cpp  guiscrollist.cpp  guitexture.cpp  musicplayer.cpp  musicplayer.h  oggsoundstream.cpp  oggsoundstream.h  openalmusicplayer.cpp  openalmusicplayer.h  soundstream.cpp  soundstream.h  tgfclient.cpp  tgfclient.h  webserver.cpp  webserver.h
src/libs/tgfdata/: CMakeLists.txt  cars.cpp  cars.h  drivers.cpp  drivers.h  race.cpp  race.h  racemanagers.cpp  racemanagers.h  tgfdata.cpp  tgfdata.h  tracks.cpp  tracks.h
src/libs/txml/: CMakeLists.txt  copying.txt  xml.cpp  xml.h  xmlparse.h
src/main/: CMakeLists.txt  main.cpp  main.rc  resource.h
src/modules/networking/: CMakeLists.txt  client.cpp  network.cpp  network.h  pack.cpp  pack.h  robotxml.cpp  robotxml.h  server.cpp
src/modules/simu/: CMakeLists.txt
src/tools/nfs2ac/: CMakeLists.txt  mainnfs2ac.cpp
(+1351 files in other folders)
