INCLUDE(../../../cmake/macros.cmake)

ADD_SUBDIRECTORY(simuv2.1)
ADD_SUBDIRECTORY(simuv4)

# Unofficial / obsolete simulation engines.
IF(NOT OPTION_OFFICIAL_ONLY)

	#SD_ADD_SUBDIRECTORY(simuv2)
	SD_ADD_SUBDIRECTORY(simuv3)

ENDIF()

IF(OPTION_3RDPARTY_SQLITE3)
	SD_ADD_SUBDIRECTORY(simureplay)
ENDIF(OPTION_3RDPARTY_SQLITE3)
