INCLUDE(../../../cmake/macros.cmake)

PROJECT(nfsperf)

SET(_TARGET_NAME ${SD_TOOLS_EXECPREFIX}nfsperf)

SET(NFSPERF_SOURCES mainnfsperf.cpp)

ADD_SDLIB_INCLUDEDIR(tgf portability)

IF(COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

SD_ADD_EXECUTABLE(${_TARGET_NAME} ${NFSPERF_SOURCES})

ADD_SDLIB_LIBRARY(${_TARGET_NAME} portability tgf txml) # txml ignored if OPTION_3RDPARTY_EXPAT

IF(UNIX)
    TARGET_LINK_LIBRARIES(${_TARGET_NAME} dl)
ENDIF(UNIX)

IF(UNIX)
    SD_INSTALL_FILES(MAN man6 PREFIX ${SOURCE_DIR}/doc/man FILES ${_TARGET_NAME}.6)
ENDIF(UNIX)

SD_INSTALL_FILES(BIN TARGETS ${_TARGET_NAME})

IF((APPLE) AND ("${CMAKE_INSTALL_PREFIX}" MATCHES "\\.app$"))
   SET(APPS "\${CMAKE_INSTALL_PREFIX}/games/${_TARGET_NAME}")
   SET(DIRS /opt/local)
   SET(DIRS ${DIRS} "\${CMAKE_INSTALL_PREFIX}/lib64/games/${_TARGET_NAME}/lib")
   SET(PlugIns)

   INSTALL(CODE "
   INCLUDE(BundleUtilities)
   SET(BU_CHMOD_BUNDLE_ITEMS ON)
   FIXUP_BUNDLE(\"${APPS}\" \"${PlugIns}\" \"${DIRS}\")")
endif()